basic responsive ui implemented

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -3,11 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="js/game.js" charset="utf-8"></script>
+
   <title>Tic Tac Toe</title>
 </head>
 <body>
+  <main>
+    <header>
+      <h1>Tic Tac Toe</h1>
+    </header>
+    <section id="board">
 
+        <div id="sq0" class="row1"></div>
+        <div id="sq1" class="row1"></div>
+        <div id="sq2" class="row1"></div>
+
+        <div id="sq3" class="row2"></div>
+        <div id="sq4" class="row2"></div>
+        <div id="sq5" class="row2"></div>
+
+        <div id="sq6" class="row3"></div>
+        <div id="sq7" class="row3"></div>
+        <div id="sq8" class="row3"></div>
+
+    </section>
+    <aside >
+      <h3>Game Status</h3>
+      <p id="notice">dsnkajg sng skj geks jn </p>
+    </aside>
+  </main>
+  <script src="js/game.js" charset="utf-8"></script>
+  <script src="js/ai.js" charset="utf-8"></script>
+  <script src="js/ui.js" charset="utf-8"></script>
 </body>
 </html>
