prevented update of board after game end

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -29,6 +29,7 @@
 
     </section>
     <aside >
+      <button id="reset">Reset Game</button>
       <h3>Game Status</h3>
       <p id="notice">dsnkajg sng skj geks jn </p>
     </aside>
