--- a/tictactoe.html
+++ b/tictactoe.html
@@ -15,21 +15,23 @@
     </header>
     <section id="board">
 
-        <div id="sq0" class="row1"></div>
-        <div id="sq1" class="row1"></div>
-        <div id="sq2" class="row1"></div>
+        <div id="sq0"></div>
+        <div id="sq1"></div>
+        <div id="sq2"></div>
 
-        <div id="sq3" class="row2"></div>
-        <div id="sq4" class="row2"></div>
-        <div id="sq5" class="row2"></div>
+        <div id="sq3"></div>
+        <div id="sq4"></div>
+        <div id="sq5"></div>
 
-        <div id="sq6" class="row3"></div>
-        <div id="sq7" class="row3"></div>
-        <div id="sq8" class="row3"></div>
+        <div id="sq6"></div>
+        <div id="sq7"></div>
+        <div id="sq8"></div>
 
     </section>
     <aside >
       <button id="reset">Reset Game</button>
+      <button id="expand">Increase Board Size</button>
+      <button id="reduce">Reduce Board Size</button>
       <h3>Game Status</h3>
       <p id="notice">dsnkajg sng skj geks jn </p>
     </aside>
