added custom names, outcome reporting

--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
     <header>
       <h1>Tic Tac Toe</h1>
     </header>
+    <aside id="settings" class="controls">
+      <div class="player-names">
+        <input type="text" id="p1-name" class="name" placeholder="P1 Name">
+        <p class="score">
+          <span id="p1-score">0</span> : <span id="p2-score">0</span>
+        </p>
+        <input type="text" id="p2-name" class="name" placeholder="P2 Name">
+      </div>
+      <div class="current">
+        <p id="result">Current Turn: </p>
+        <p id="current">P1</p>
+      </div>
+    </aside>
     <section id="board">
 
         <div id="sq0"></div>
@@ -29,10 +42,13 @@
         <div id="sq8"></div>
 
     </section>
-    <aside class="controls">
+    <aside id="controls" class="controls">
       <button id="reset">Reset Game</button>
-      <button id="expand">Increase Board Size</button>
-      <button id="reduce">Reduce Board Size</button>
+      <div class="board-size">
+        Board Size:
+      <button id="expand">+</button>
+      <button id="reduce">-</button>
+      </div>
     </aside>
     <aside class="log">
       <h3>Game Log</h3>
