cleaned and fix styling

--- a/index.html
+++ b/index.html
@@ -27,21 +27,7 @@
         <p id="current">P1</p>
       </div>
     </aside>
-    <section id="board">
-
-        <div id="sq0"></div>
-        <div id="sq1"></div>
-        <div id="sq2"></div>
-
-        <div id="sq3"></div>
-        <div id="sq4"></div>
-        <div id="sq5"></div>
-
-        <div id="sq6"></div>
-        <div id="sq7"></div>
-        <div id="sq8"></div>
-
-    </section>
+    <section id="board"></section>
     <aside id="controls" class="controls">
       <button id="reset">Reset Game</button>
       <div class="board-size">
@@ -51,7 +37,6 @@
       </div>
     </aside>
     <aside class="log">
-      <h3>Game Log</h3>
       <article id="notice">Game started...</article>
     </aside>
   </main>
