--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
       <article id="notice">Game started...</article>
     </aside>
   </main>
+  <div class="reset-pop">
+    <p>This game is over, X was the winner.</p>
+    <button id="newgame" class="reset">New Game</button>
+  </div>
   <script src="js/game.js" charset="utf-8"></script>
   <script src="js/ai.js" charset="utf-8"></script>
   <script src="js/ui.js" charset="utf-8"></script>
