--- a/index.html
+++ b/index.html
@@ -13,15 +13,20 @@
   <main>
     <header>
       <h1>Tic Tac Toe</h1>
+      <div>
+        <label for="ai">AI Opponent</label>
+        <input type="checkbox" id="ai" name="ai"></input>
+      </div>
     </header>
+
     <aside id="settings" class="controls players">
-        <input type="text" id="p1-name" class="name" placeholder="P1 Name">
+        <input type="text" id="p1-name" class="name" placeholder="P1">
         <div>
           <p class="score">
             <span id="p1-score">0</span> : <span id="p2-score">0</span>
           </p>
         </div>
-        <input type="text" id="p2-name" class="name" placeholder="P2 Name">
+        <input type="text" id="p2-name" class="name" placeholder="P2">
     </aside>
     <section id="board"></section>
     <aside id="controls" class="controls">
@@ -33,18 +38,25 @@
       <div class="board-size">
         <p>Board Size:</p>
         <div>
-          <button id="expand">+</button>
           <button id="reduce">-</button>
+          <button id="expand">+</button>
         </div>
       </div>
     </aside>
     <aside class="log">
+      <p id="log-toggle">&#8593; Game Log</p>
       <article id="notice">Game started...</article>
     </aside>
   </main>
-  <div class="reset-pop">
-    <p>This game is over, X was the winner.</p>
-    <button id="newgame" class="reset">New Game</button>
+  <div id="reset-pop" class="pop">
+    <p>This game is over, <span id="winner">X</span> was the winner.</p>
+    <button id="newgame">New Game</button>
+    <button id="dismiss">Dismiss</button>
+  </div>
+  <div id="ai-pop" class="pop">
+    <p>This will reset the current game and scores.</p>
+    <button id="continue">Continue</button>
+    <button id="cancel">Cancel</button>
   </div>
   <script src="js/game.js" charset="utf-8"></script>
   <script src="js/ai.js" charset="utf-8"></script>
