removed logging feature from ui

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         </div>
       </div>
     </aside>
-    <aside class="log">
+    <!-- <aside class="log">
       <p id="log-toggle">&#8593; Game Log</p>
       <article id="notice">Game started...</article>
-    </aside>
+    </aside> -->
   </main>
   <div id="reset-pop" class="pop">
     <p>This game is over, <span id="winner">X</span> was the winner.</p>
