--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/light.min.css">
   <link rel="stylesheet" href="css/style.css">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
   <title>Tic Tac Toe</title>
 </head>
 <body>
@@ -18,7 +17,6 @@
         <input type="checkbox" id="ai" name="ai"></input>
       </div>
     </header>
-
     <aside id="settings" class="controls players">
         <input type="text" id="p1-name" class="name" placeholder="P1">
         <div>
@@ -30,7 +28,7 @@
     </aside>
     <section id="board"></section>
     <aside id="controls" class="controls">
-      <button id="reset">Reset Game</button>
+      <button id="reset">Reset</button>
       <div class="current">
         <p id="result">Current Turn: </p>
         <p id="current">P1</p>
@@ -43,10 +41,6 @@
         </div>
       </div>
     </aside>
-    <!-- <aside class="log">
-      <p id="log-toggle">&#8593; Game Log</p>
-      <article id="notice">Game started...</article>
-    </aside> -->
   </main>
   <div id="reset-pop" class="pop">
     <p>This game is over, <span id="winner">X</span> was the winner.</p>
