refactoring, ui fixes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </aside>
   </main>
   <div id="reset-pop" class="pop">
-    <p>This game is over, <span id="winner">X</span> was the winner.</p>
+    <p>Game Over!</p>
     <button id="newgame">New Game</button>
     <button id="dismiss">Dismiss</button>
   </div>
